<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="Home"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/wguTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wgu"
        android:textAllCaps="true"
        android:textSize="72sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/viewAssessments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewAssessments"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="169dp"
        android:onClick="onClick"
        android:text="@string/viewAssessments"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewCourses"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/viewCourses"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/viewCourses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewAssessments"
        app:layout_constraintTop_toTopOf="@+id/viewAssessments" />

    <Button
        android:id="@+id/viewMentors"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="onClick"
        android:text="@string/viewMentors"
        app:layout_constraintEnd_toStartOf="@+id/viewTerms"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewAssessments" />

    <Button
        android:id="@+id/viewTerms"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="onClick"
        android:text="@string/viewTerms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/viewMentors"
        app:layout_constraintTop_toBottomOf="@+id/viewCourses" />

    <android.support.constraint.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="731dp"
        app:constraint_referenced_ids="viewAssessments,viewCourses,viewMentors,viewTerms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>